Bug 60042 - >=xf86-video-intel-2.20.18 built with '--enable-sna' cause flash fullscreen freezing with hard crashing Xorg
Summary: >=xf86-video-intel-2.20.18 built with '--enable-sna' cause flash fullscreen f...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-29 23:16 UTC by rickfharris
Modified: 2013-01-30 21:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg-intel_crash-debug.txt (2.92 KB, text/plain)
2013-01-29 23:16 UTC, rickfharris
no flags Details

Description rickfharris 2013-01-29 23:16:52 UTC
Created attachment 73886 [details]
Xorg-intel_crash-debug.txt

Refer also https://bugs.gentoo.org/show_bug.cgi?id=454412

>=xf86-video-intel-2.20.18 installed with '--enable-sna' causes flash fullscreen video to freeze and sometimes crash Xorg entirely.

When the fullscreen video freezes it can be woken up by issuing some Xorg OSD (eg.Gnome/KDE volume display) but immediately freezes afterwards.
The audio continues playing in the background, just the video freezes.

The version of Adobe Flash does not matter, tested with 11.2.202.261 and 10.3.183.50.

The version of kernel does not matter, tested with 3.4.11 and 3.7.1.

The bug occurs in multiple browsers.
Tested with Firefox, Chrome, Chromium and Opera.

Does not affect any xf86-video-intel version built with '--disable-sna'.

Using Intel® Ironlake Mobile GPU.

Bug does not occur if X11 compositing is disabled.

Xorg crash backtrace attached...
Comment 1 Chris Wilson 2013-01-29 23:26:30 UTC
Can you please compile with --enable-debug=full, and attach the complete Xorg.log leading to the crash?
Comment 2 Chris Wilson 2013-01-29 23:27:49 UTC
In gentoo, I believe it is USE=full-debug
Comment 3 rickfharris 2013-01-30 05:52:17 UTC
I've built it with --enable-debug=full and the resulting Xorg.log can be found here -> http://ompldr.org/vaGEydA

This is using xf86-video-intel-2.20.19.

It was a 500MB file so thought it appropriate to tarball and upload elsewhere (now 16MB).

Thanks.
Comment 4 Chris Wilson 2013-01-30 08:47:31 UTC
Thank you, that logfile was most informative:

commit de28027ffc649920268ae6fdd64146f08310e8a4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 30 08:42:48 2013 +0000

    sna/dri: Make sure we discard the existing mappings when swapping GPU bo
    
    If the GPU bo is currently mapped to the Pixmap, we need to be sure to
    invalidate that mapping if we swap the GPU bo (for SwapBuffers). If we
    forget, we leave a dangling pointer to chase.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=60042
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 rickfharris 2013-01-30 21:19:58 UTC
Perfect!

Even without doing a full git checkout and just using that commit as a patch to 2.20.19 source fixes the problem.

Thanks for the quick response and fix! :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.